--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no, width=device-width"/>
     <title>practice</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,18 +11,41 @@
           rel="stylesheet">
 </head>
 <body>
-<button class="button button__primary">Start</button>
-<button class="button button__primary-var">Start</button>
-<button class="button button__secondary">Start</button>
-<button class="button button__secondary-var">Start</button>
-<div class="big-cards-block">
+<section class="header">
+    <header>
+        <div class="header__logo">
+            <img src="./public/image/logo.png" alt="">
+        </div>
+        <button class="button button__primary">Sing Up</button>
+        <div class="header__menu">
+            <p class="menu-line"></p>
+            <p class="menu-line"></p>
+        </div>
+    </header>
+    <h2>Turn your company knowledge into answers and agents</h2>
+    <p class="header__title">Realm's AI agents arm your revenue team with instant answers to customer questions,
+        automate RFPs, and supercharge your revenue enablement.</p>
+    <div class="header__btn">
+        <button class="button button__primary">Get started for free</button>
+    </div>
+    <div class="header__icons">
+        <img src="./public/image/logo_1.png" alt="">
+        <img src="./public/image/logo_2.png" alt="">
+        <img src="./public/image/logo_3.png" alt="">
+        <img src="./public/image/logo_4.png" alt="">
+        <img src="./public/image/logo_5.png" alt="">
+        <img src="./public/image/logo_6.png" alt="">
+    </div>
+</section>
+<section class="big-cards-block">
     <h2>AI agents for revenue teams</h2>
     <div class="big-cards">
         <div class="big-card">
             <div class="collapse-icon-var"></div>
 
             <h3 class="big-card__name">Rapid answers to technical and product questions</h3>
-            <p class="big-card__title">Empower your customer-facing teams with 24/7 guidance on product features, technical
+            <p class="big-card__title">Empower your customer-facing teams with 24/7 guidance on product features,
+                technical
                 details, use cases, and more.</p>
             <div class="link-block-var arrow-white-var">
                 <a href="">Get started for free</a>
@@ -32,7 +55,8 @@
             <div class="collapse-icon-var"></div>
 
             <h3 class="big-card__name">Automate RFPs and other questionnaires</h3>
-            <p class="big-card__title">Empower your customer-facing teams with 24/7 guidance on product features, technical
+            <p class="big-card__title">Empower your customer-facing teams with 24/7 guidance on product features,
+                technical
                 details, use cases, and more.</p>
             <div class="link-block-var arrow-white-var">
                 <a href="">Get started for free</a>
@@ -42,22 +66,59 @@
             <div class="collapse-icon-var"></div>
 
             <h3 class="big-card__name">Instant revenue enablement</h3>
-            <p class="big-card__title">Empower your customer-facing teams with 24/7 guidance on product features, technical
+            <p class="big-card__title">Empower your customer-facing teams with 24/7 guidance on product features,
+                technical
                 details, use cases, and more.</p>
             <div class="link-block-var arrow-white-var">
                 <a href="">Get started for free</a>
             </div>
         </div>
     </div>
-</div>
+</section>
 
-<div class="generate">
+<section class="generate">
     <p class="generate__name">
         Accelerate revenue-generating work with AI
     </p>
-</div>
+    <div class="generate__item generate__item-active">
+        <p class="generate__item-header">
+            Instant answers
+        </p>
+        <p class="generate__item-title">
+            Find trustworthy answers from across your knowledge base. Equip your team with the technical baseline to
+            sell effectively and advise customers.
+        </p>
+        <div class="generate__img">
+            <img src="./public/image/generate_1.jpg" alt="">
+        </div>
+    </div>
+    <div class="generate__item">
+        <p class="generate__item-header">
+            Agents
+        </p>
+        <p class="generate__item-title">
+            Find trustworthy answers from across your knowledge base. Equip your team with the technical baseline to
+            sell effectively and advise customers.
+        </p>
+        <div class="generate__img">
+            <img src="./public/image/generate_2.jpg" alt="">
+        </div>
+    </div>
+    <div class="generate__item">
+        <p class="generate__item-header">
+            Instant answers
+        </p>
+        <p class="generate__item-title">
+            Find trustworthy answers from across your knowledge base. Equip your team with the technical baseline to
+            sell effectively and advise customers.
+        </p>
+        <div class="generate__img">
+            <img src="./public/image/generate_3.jpg" alt="">
+        </div>
+    </div>
+</section>
 
-<div class="small-cards-block">
+<section class="small-cards-block">
     <h2>Trusted by 9,000+ CX teams to
         deliver top-quality service at scale</h2>
     <div class="link-block">
@@ -144,7 +205,305 @@
 
     </div>
 
-</div>
+</section>
+
+<section class="how">
+    <h2>How it works</h2>
+    <p class="how__title">
+        The foundations of fast, reliable and consistent incident management.
+    </p>
+    <div class="link-block">
+        <a href="">Get started for free</a>
+    </div>
+    <div class="how__images">
+        <div class="how__images-item active">
+            <img src="./public/image/how_1.jpg" alt="">
+        </div>
+        <div class="how__images-item">
+            <img src="./public/image/how_2.jpg" alt="">
+        </div>
+        <div class="how__images-item">
+            <img src="./public/image/how_3.jpg" alt="">
+        </div>
+    </div>
+    <div class="how__items">
+        <div class="how__item how-active">
+            <p class="how__item-name">Customize to fit your brand</p>
+            <p class="how__item-title">Define your return policy and customize the branding to match your brand’s unique
+                identity, ensuring a consistent and branded experience for your customers.</p>
+            <div class="how__item-img">
+                <img src="./public/image/how_1.jpg" alt="">
+            </div>
+        </div>
+        <div class="how__item">
+            <p class="how__item-name">Seamless returns for customers</p>
+            <p class="how__item-title">Customers can easily initiate a return, choose exchanges, store credit, or a
+                refund, and receive their return shipping label – all in a smooth, user-friendly portal.</p>
+            <div class="how__item-img">
+                <img src="./public/image/how_2.jpg" alt="">
+            </div>
+        </div>
+        <div class="how__item">
+            <p class="how__item-name">Track and process effortlessly</p>
+            <p class="how__item-title">Monitor returns in your dashboard, manage them in your warehouse or connect your
+                3PL partner for real-time status updates. Let our platform handle the heavy lifting.</p>
+            <div class="how__item-img">
+                <img src="./public/image/how_3.jpg" alt="">
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="build">
+    <h2>Built on rock-solid foundations</h2>
+    <p class="build__title">The foundations of fast, reliable and consistent incident management.</p>
+    <div class="link-block">
+        <a href="">Get started for free</a>
+    </div>
+    <div class="slider-container">
+
+        <div class="build__items">
+            <div class="build__item">
+                <img src="./public/image/icon_1.png" alt="">
+                <p class="build__item-name">Agents</p>
+                <p class="build__item-title">Put the right context at your team’s fingertips, instantly.</p>
+            </div>
+            <div class="build__item">
+                <img src="./public/image/icon_2.png" alt="">
+                <p class="build__item-name">Catalog</p>
+                <p class="build__item-title">Put the right context at your team’s fingertips, instantly.</p>
+            </div>
+            <div class="build__item">
+                <img src="./public/image/icon_3.png" alt="">
+                <p class="build__item-name">Workflows</p>
+                <p class="build__item-title">Automate incident processes and stay consistent at scale.</p>
+            </div>
+            <div class="build__item">
+                <img src="./public/image/icon_4.png" alt="">
+                <p class="build__item-name">Insights</p>
+                <p class="build__item-title">Understand trends, reduce noise, and improve response times.</p>
+            </div>
+            <div class="build__item">
+                <img src="./public/image/icon_5.png" alt="">
+                <p class="build__item-name">Integrations</p>
+                <p class="build__item-title">Connect the tools you already use, and take action from one place.</p>
+            </div>
+            <div class="build__item">
+                <img src="./public/image/icon_6.png" alt="">
+                <p class="build__item-name">AI</p>
+                <p class="build__item-title">Intelligence, context and power at the core of every incident.</p>
+            </div>
+        </div>
+        <div class="build__buttons">
+            <button class="build__btn prev-btn"><img src="./public/image/arrow_prev.png" alt=""></button>
+            <button class="build__btn next-btn"><img src="./public/image/arrow_prev.png" alt=""></button>
+        </div>
+    </div>
+</section>
+
+<section class="realm">
+    <p class="realm__name">Realm in action</p>
+    <p class="realm__title">
+        The only way to grasp Realm’s impact is to try it. We’ll help connect your company’s knowledge and onboard your
+        team. You can get going today!
+    </p>
+    <div class="realm__btn">
+        <button class="button button__primary">Get started for free</button>
+    </div>
+</section>
+
+<section class="future">
+    <h2>The future of the web is yours to build</h2>
+    <p class="future__title">Explore whitepapers, ebooks, and more about creating web experiences that get results with
+        Webflow.</p>
+    <div class="future-slider-container">
+        <div class="future__items">
+            <div class="future__item">
+                <div class="future__item-main">
+                    <p class="future__item-name">Reclaimed per employee per year</p>
+                    <div class="link-block">
+                        <a href="">Watch webinar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="future__item">
+                <div class="future__item-main">
+                    <p class="future__item-name">Reclaimed per employee per year</p>
+                    <div class="link-block">
+                        <a href="">Watch webinar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="future__item">
+                <div class="future__item-main">
+                    <p class="future__item-name">Reclaimed per employee per year</p>
+                    <div class="link-block">
+                        <a href="">Watch webinar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="future__item">
+                <div class="future__item-main">
+                    <p class="future__item-name">Reclaimed per employee per year</p>
+                    <div class="link-block">
+                        <a href="">Watch webinar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="future__item">
+                <div class="future__item-main">
+                    <p class="future__item-name">Reclaimed per employee per year</p>
+                    <div class="link-block">
+                        <a href="">Watch webinar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="future__item">
+                <div class="future__item-main">
+                    <p class="future__item-name">Reclaimed per employee per year</p>
+                    <div class="link-block">
+                        <a href="">Watch webinar</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="future__buttons">
+            <button class="build__btn future-prev-btn"><img src="./public/image/arrow_prev.png" alt=""></button>
+            <button class="build__btn future-next-btn"><img src="./public/image/arrow_prev.png" alt=""></button>
+        </div>
+    </div>
+</section>
+
+<section class="faq">
+    <h2>FAQs</h2>
+    <div class="faq__item">
+        <div class="faq__item-header">
+            <p class="faq__item-title">Built with security and privacy in mind since day one</p>
+            <div class="collapse-icon-var faq-col"></div>
+        </div>
+        <p class="faq__item-text">
+            Single-tenant architecture
+            Each customer has their own application servers, database, and search index.
+            <br/>
+            No training of LLMs
+            Realm uses enterprise-grade, private endpoints to access LLMS.
+            <br/>
+            Data encryption
+            Your data is encrypted both at rest (AES-256) and in transit (TLS 1.2+).
+            <br/>
+            Permissions enforcement
+            All knowledge in Realm mirrors existing user permissions.
+            <br/>
+            Penetration tested
+            We undergo regular third-party pentests.
+        </p>
+    </div>
+    <div class="faq__item">
+        <div class="faq__item-header">
+            <p class="faq__item-title">Built with security and privacy in mind since day one</p>
+            <div class="collapse-icon-var faq-col"></div>
+        </div>
+        <p class="faq__item-text">
+            Single-tenant architecture
+            Each customer has their own application servers, database, and search index.
+            <br/>
+            No training of LLMs
+            Realm uses enterprise-grade, private endpoints to access LLMS.
+            <br/>
+            Data encryption
+            Your data is encrypted both at rest (AES-256) and in transit (TLS 1.2+).
+            <br/>
+            Permissions enforcement
+            All knowledge in Realm mirrors existing user permissions.
+            <br/>
+            Penetration tested
+            We undergo regular third-party pentests.
+        </p>
+    </div>
+    <div class="faq__item">
+        <div class="faq__item-header">
+            <p class="faq__item-title">Built with security and privacy in mind since day one</p>
+            <div class="collapse-icon-var faq-col"></div>
+        </div>
+        <p class="faq__item-text">
+            Single-tenant architecture
+            Each customer has their own application servers, database, and search index.
+            <br/>
+            No training of LLMs
+            Realm uses enterprise-grade, private endpoints to access LLMS.
+            <br/>
+            Data encryption
+            Your data is encrypted both at rest (AES-256) and in transit (TLS 1.2+).
+            <br/>
+            Permissions enforcement
+            All knowledge in Realm mirrors existing user permissions.
+            <br/>
+            Penetration tested
+            We undergo regular third-party pentests.
+        </p>
+    </div>
+</section>
+
+<section class="unlock">
+    <h2>Unlock efficient revenue growth with Realm</h2>
+    <div class="unlock__buttons">
+        <button class="button button__primary">Get a demo</button>
+        <button class="button button__secondary">Watch demo</button>
+    </div>
+</section>
+<footer class="footer">
+    <div class="footer__upper">
+        <p class="footer__title">© 2025 Realm, Inc. All rights reserved</p>
+        <div class="footer__links">
+            <div class="footer__link">
+                <p class="footer__link-name">
+                    Company
+                </p>
+                <ul>
+                    <li>About</li>
+                    <li>Terms</li>
+                    <li>Legal</li>
+                    <li>Press</li>
+                </ul>
+            </div>
+            <div class="footer__link">
+                <p class="footer__link-name">
+                    Product
+                </p>
+                <ul>
+                    <li>Platform</li>
+                    <li>Interaction</li>
+                    <li>CEO</li>
+                </ul>
+            </div>
+            <div class="footer__link">
+                <p class="footer__link-name">
+                    Resources
+                </p>
+                <ul>
+                    <li>Webinars</li>
+                    <li>Blog</li>
+                    <li>Customer</li>
+                </ul>
+            </div>
+        </div>
+        <p class="footer__title-web">© 2025 Realm, Inc. All rights reserved</p>
+    </div>
+
+    <div class="footer__bottom">
+        <a href="" class="footer__bottom-title">Your use of this site is subject to Terms of Service</a>
+        <div class="footer__bottom-icons">
+            <img src="./public/image/soc_1.png" alt="">
+            <img src="./public/image/soc_2.png" alt="">
+            <img src="./public/image/soc_3.png" alt="">
+        </div>
+
+        <div class="footer__bottom-right">
+            <a href="">Security</a>
+            <a href="">Privacy Policy</a>
+        </div>
+    </div>
+</footer>
 <script type="module" src="/src/main.js"></script>
 </body>
 
